Wrong static position for out-of-flow positioned element with different writing-mode than its containing block https://bugs.webkit.org/show_bug.cgi?id=189513

Patch by Ziran Sun <zsun@igalia.com> on 2021-05-14
Reviewed by Sergio Villar Senin.

LayoutTests/imported/w3c:

Updated the following WPT tests that are now passing.

* web-platform-tests/css/css-grid/abspos/orthogonal-positioned-grid-descendants-001-expected.txt:
* web-platform-tests/css/css-grid/abspos/orthogonal-positioned-grid-descendants-002-expected.txt:
* web-platform-tests/css/css-grid/abspos/orthogonal-positioned-grid-descendants-003-expected.txt:
* web-platform-tests/css/css-grid/abspos/orthogonal-positioned-grid-descendants-004-expected.txt:
* web-platform-tests/css/css-grid/abspos/orthogonal-positioned-grid-descendants-005-expected.txt:
* web-platform-tests/css/css-grid/abspos/orthogonal-positioned-grid-descendants-007-expected.txt:
* web-platform-tests/css/css-grid/abspos/orthogonal-positioned-grid-descendants-010-expected.txt:

Source/WebCore:

The static distance computations (computeBlockStaticDistance & computeInlineStaticDistance) in RenderBox have
not been patched for mixed writing modes. This CL adds support for the case that child is orthogonal to its
container block when container block's text direction is LTR. It aims at fixing failures in
orthogonal-positioned-grid-descendants*.html tests. It is noted that this CL only covers specific case when child's
writing mode is vlr and parent is horizontal tb rather than all cases of mixed writing modes in the static distance
computations.

* rendering/RenderBox.cpp:
(WebCore::computeInlineStaticDistance):
(WebCore::computeBlockStaticDistance):

LayoutTests:

* TestExpectations: updating 22 css-writing-modes tests that are passing.

Canonical link: https://commits.webkit.org/237729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277497 268f45cc-cd09-0410-ab3c-d52691b4dbfc